--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -95,7 +95,7 @@ body {
 /* Hero Section */
 .hero-section {
   height: 90vh;
-  background: url('assets/hero.png') no-repeat center center/cover;
+  background: url('../img/hero.png') no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -153,7 +153,7 @@ body {
 .hero-section {
   position: relative;
   height: 90vh;
-  background: url('../assets/hero.png') no-repeat center center/cover;
+  background: url('../img/hero.png') no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -190,7 +190,7 @@ body {
 .section-divider {
   width: 100%;
   height: 100px;
-  background-image: url('../assets/divider.png');
+  background-image: url('../img/divider.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -426,7 +426,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('../assets/bg_prev.png') center center / cover no-repeat;
+  background: url('../img/bg_prev.png') center center / cover no-repeat;
   opacity: 0.3;
   z-index: -1;
   background-color: #ffffff;
@@ -540,7 +540,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('../assets/bg_prev.png') center center / cover no-repeat;
+  background: url('../img/bg_prev.png') center center / cover no-repeat;
   opacity: 0.3;
   z-index: -1;
   background-color: #ffffff;
