--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -99,7 +99,7 @@ body {
 /* Hero Section */
 .hero-section {
   height: 90vh;
-  background: url("assets/hero.png") no-repeat center center/cover;
+  background: url("../img/hero.png") no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -156,7 +156,7 @@ body {
 .hero-section {
   position: relative;
   height: 90vh;
-  background: url("../assets/hero.png") no-repeat center center/cover;
+  background: url("../img/hero.png") no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -193,7 +193,7 @@ body {
 .section-divider {
   width: 100%;
   height: 100px;
-  background-image: url("../assets/divider.png");
+  background-image: url("../img/divider.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -301,7 +301,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../assets/bg_prev.png") center center / cover no-repeat;
+  background: url("../img/g_prev.png") center center / cover no-repeat;
   opacity: 0.3;
   z-index: -1;
   background-color: #ffffff;
@@ -571,7 +571,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../assets/bg_prev.png") center center / cover no-repeat;
+  background: url("../img/bg_prev.png") center center / cover no-repeat;
   opacity: 0.3;
   z-index: -1;
   background-color: #ffffff;
@@ -685,7 +685,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../assets/bg_prev.png") center center / cover no-repeat;
+  background: url("../img/bg_prev.png") center center / cover no-repeat;
   opacity: 0.3;
   z-index: -1;
   background-color: #ffffff;
